--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -3,3 +3,12 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/deps.cmake)
 add_executable(client "src/main.cpp")
 target_link_libraries(client PRIVATE openblocks glfw)
 add_dependencies(client openblocks)
+
+if(WIN32)
+    # Copy assets
+    add_custom_command(
+        TARGET client POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+            ${CMAKE_SOURCE_DIR}/assets
+            $<TARGET_FILE_DIR:client>/assets)
+endif()
