chore: added build task for vscode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,7 @@
             "program": "${workspaceFolder}/build/bin/editor",
             "args": [],
             "cwd": "${workspaceFolder}",
+            "preLaunchTask": "buildDebug"
         },
         {
             "type": "lldb",
