feat(test): replace custom test header with Catch2 and migrated lua tests to new system

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,14 +1,12 @@
-function (create_test TEST_NAME)
-    set(TARGET_NAME test_${TEST_NAME})
-    add_executable(${TARGET_NAME} ${ARGN})
-    target_link_libraries(${TARGET_NAME} PRIVATE openblocks)
-    add_dependencies(${TARGET_NAME} openblocks)
-    add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
-endfunction ()
 
-create_test(lua src/luatest.cpp)
-create_test(luasched src/luaschedtest.cpp)
-create_test(luasignal src/luasignaltest.cpp)
+include(${CMAKE_CURRENT_SOURCE_DIR}/deps.cmake)
 
-# https://stackoverflow.com/a/36729074/16255372
-add_custom_target(check ${CMAKE_CTEST_COMMAND} --output-on-failure WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+add_executable(obtest
+    src/common.cpp
+    src/lua/luasched.cpp
+    src/lua/luasignal.cpp
+    src/lua/luageneric.cpp
+)
+target_link_libraries(obtest PRIVATE openblocks Catch2::Catch2WithMain)
+target_include_directories(obtest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+catch_discover_tests(obtest)
