feat(tests): added parenting tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(obtest
     src/lua/luasched.cpp
     src/lua/luasignal.cpp
     src/lua/luageneric.cpp
+    src/objectmodel/basic.cpp
 )
 target_link_libraries(obtest PRIVATE openblocks Catch2::Catch2WithMain)
 target_include_directories(obtest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
