test(datamodel): accessing and using properties with lua

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,9 @@ add_executable(obtest
     src/lua/luasched.cpp
     src/lua/luasignal.cpp
     src/lua/luageneric.cpp
+    src/lua/luainst.cpp
     src/objectmodel/basic.cpp
+    # src/objectmodel/datamodel.cpp
 )
 target_link_libraries(obtest PRIVATE openblocks Catch2::Catch2WithMain)
 target_include_directories(obtest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
