feat(objmodelv2): member inheritance

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(obtest
     src/objectmodelv2/typemeta.cpp
     src/objectmodelv2/members.cpp
     src/objectmodelv2/categories.cpp
+    src/objectmodelv2/inheritance.cpp
 )
 target_link_libraries(obtest PRIVATE openblocks Catch2::Catch2WithMain)
 target_include_directories(obtest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
