--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -39,7 +39,7 @@ set(PROJECT_SOURCES
 )
 
 qt_add_executable(editor MANUAL_FINALIZATION ${PROJECT_SOURCES})
-target_include_directories(editor PRIVATE .)
+target_include_directories(editor PRIVATE . "${CMAKE_SOURCE_DIR}/external/glad")
 target_link_libraries(editor PRIVATE openblocks Qt6::Widgets Qt6::OpenGLWidgets ${QSCINTILLA_LIBRARY} miniaudio QCursorConstraints)
 
 set_target_properties(editor PROPERTIES
